src/test/deca/context/invalid/new-boolean.deca
// Description:
//    Utilisation de new pour créer un boolean
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

{
    new boolean();
}
